# Chips-Rajoy

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  credits.txt  make.sh  run.sh
doc/: README.norg
src/: Audio.cpp  Audio.h  DVD.cpp  DVD.h  Font.cpp  Font.h  Fonts.cpp  Fonts.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  PlayerSprite.cpp  PlayerSprite.h  Sound.cpp  Sound.h  main.cpp
src/_/: Events.cpp  Events.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Text.cpp  Text.h  main.cpp
